# audio-pond

./: .env.example  .gitignore  DOCKER.md  Dockerfile  PRD.md  README.md  audio-pond.code-workspace  flake.nix  pyproject.toml  requirements.txt
src/: audio_pond.py
src/processors/: __init__.py  audio_processor.py  lilypond_converter.py  midi_processor.py  midi_transcriber.py  source_processor.py
src/utils/: __init__.py  gpu_utils.py
test/: input.ly  output.ly  test_lilypond_converter.py
