[project]
name = "audio-pond"
version = "1.0.0"
description = "Convert piano performances into professional sheet music"
authors = []
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ipykernel",
    "click",
    "pydub",
    "yt-dlp",
    "librosa",
    "piano-transcription-inference",
    "torch",
]
