[project]
name = "audio-pond"
version = "1.0.0"
description = "Convert piano music into lilypond and sheet music"
authors = []
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipykernel",
    "click",
    "pydub",
    "yt-dlp",
    "librosa",
    "piano-transcription-inference",
    "torch",
    "python-dotenv",
    "mido",
]
